syntax = "proto3";

package user;

service UserService {

    rpc RegisterUser (CreateUserRequest) returns (RegisterUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
    rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse) {}
    
    rpc CreateUser(CreateUserRequest) returns (User) {}
    rpc FindAllUser(Empty) returns (stream Users) {}
    rpc FindOneUserbyId(FindOneUserByIdRequest) returns (User) {}
    rpc FindOneUserByEmail(FindOneUserByEmailRequest) returns  (User) {}
    rpc UpdateUser(UpdateUserRequest) returns (User) {}
    rpc RemoveUser(FindOneUserByIdRequest) returns (User) {}

}
message RegisterUserResponse {
    int32 status = 1;
    repeated string error = 2;
  }

message LoginUserRequest {
    string email = 1;
    string password = 2;
  }
  
  message LoginUserResponse {
    int32 status = 1;
    repeated string error = 2;
    string token = 3;
  }
  
  message ValidateUserRequest {
    string token = 1;
  }
  
  message ValidateUserResponse {
    int32 status = 1;
    repeated string error = 2;
    string userId = 3;
  }

message UpdateUserRequest {
    string id = 1;
}
message FindOneUserByIdRequest {
     string id = 1;
}
message FindOneUserByEmailRequest {
  string email = 1;
}

message Users {
    repeated User users = 1;
}
message Empty {

}
message CreateUserRequest {
    string email = 1;
    string password = 2;
    optional string firstName = 3;
    optional string lastName = 4;
}

message User {
    string id = 1;
    string email = 2;
    string password = 3;
    optional string firstName = 4;
    optional string lastName = 5;
}
